--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,29 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - .:/usr/src
-      - /usr/src/node_modules
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - 3000:3000
       - 9229:9229
     command: npm run start:dev
     networks:
       - api-boilerplate
+  mysql:
+    container_name: api-boilerplate-db
+    image: mysql:5.7
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: database
+      TZ: America/Santiago
+    ports:
+      - 3306:3306
+    networks:
+      - api-boilerplate
+    command: mysqld --sql_mode=""
+    volumes:
+      - ./.data/db:/var/lib/mysql
 networks:
   api-boilerplate:
     driver: bridge
