chore(app): actualizacion de herramientas
actualizacion de configuracion de herramientas del repositorio

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start:dev": "nodemon --inspect=0.0.0.0 ./bin/www",
     "test": "jest",
     "lint": "eslint 'src/**/*.js' --fix",
-    "format": "prettier-eslint 'src/**/*.{js,json}' --write"
+    "format": "prettier-eslint 'src/**/*.{js,json}' --write",
+    "commit": "git-cz",
+    "migrate": "sequelize db:migrate",
+    "migrate:reset": "sequelize db:migrate:undo:all",
+    "seed": "sequelize db:seed:all"
   },
   "jest": {
     "testEnvironment": "node",
@@ -31,6 +35,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -44,11 +51,27 @@
   },
   "dependencies": {
     "@hapi/joi": "^16.1.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-locale": "^2.0.0",
+    "helmet": "^3.21.2",
+    "mysql2": "^2.1.0",
     "node-polyglot": "^2.4.0",
+    "sequelize": "^5.21.4",
     "swagger-jsdoc": "^3.4.0",
-    "swagger-ui-express": "^4.1.2"
+    "swagger-ui-express": "^4.1.2",
+    "uuid": "^3.4.0",
+    "winston": "^3.2.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
