--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,16 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-      {
-        "name": "Debuggear en Docker",
-        "type": "node",
-        "request": "attach",
-        "port": 9229,
-        "address": "localhost",
-        "localRoot": "${workspaceFolder}",
-        "remoteRoot": "/usr/src",
-        "protocol": "inspector",
-        "restart": true
-      }
+    {
+      "name": "Debuggear en Docker",
+      "type": "node",
+      "request": "attach",
+      "port": 9229,
+      "address": "localhost",
+      "localRoot": "${workspaceFolder}",
+      "remoteRoot": "/usr/src/app",
+      "protocol": "inspector",
+      "restart": true
+    }
   ]
 }
