--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lint-staged": "^9.4.1",
     "nodemon": "^1.19.3",
     "prettier-eslint-cli": "^5.0.0",
+    "sequelize-cli": "^5.5.1",
     "supertest": "^4.0.2"
   },
   "dependencies": {
@@ -56,7 +57,8 @@
     "express": "^4.17.1",
     "express-locale": "^2.0.0",
     "helmet": "^3.21.2",
-    "mysql2": "^2.1.0",
+    "pg": "^7.18.1",
+    "pg-hstore": "^2.3.3",
     "node-polyglot": "^2.4.0",
     "sequelize": "^5.21.4",
     "swagger-jsdoc": "^3.4.0",
