--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.0",
     "zone.js": "~0.10.2"
